<resources>
    <string name="app_name">animating_screen</string>
    <string name="title_activity_navigationbar">Navigationbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="aboutus">About us</string>
    <string name="aboutfounder">About Our Founder</string>
    <string name="internship">Internship Opportunity</string>
    <string name="donation">Donation</string>
    <string name="locateus">Locate Us</string>
    <string name="yef">" Y E F"</string>
    <string name="YEF2">"  Youth Empowerment Foundation"</string>
    <string name="yef3">" Y  E  F"</string>
    <string name="login2">Login/Register</string>
    <string name="contactus">Contact Us</string>
    <string name="yefr4">"    Y  E  F"</string>
    <string name="YEF5">"  Y  E  F"</string>
</resources>