<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login2" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/aboutus" />
        <item
            android:id="@+id/nav_aboutfounder"
            android:icon="@android:drawable/btn_star"
            android:title="@string/aboutfounder" />
        <item
            android:id="@+id/nav_internship"
            android:icon="@drawable/internship"
            android:title="@string/internship" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/donation" />
        <item
            android:id="@+id/nav_locateus"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/locateus" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/contactus" />

    </group>
</menu>